# AgentOps

./: .gitignore  README.en.md  README.md  README.zh-CN.md  agent.md  pyproject.toml
agentops/: __init__.py  cli.py
agentops/analyzers/: __init__.py  git.py
agentops/core/: __init__.py  artifact.py  asset.py  eval.py  evaluation.py  evidence.py  memory.py  recommendation.py  repo.py  session.py  workflow.py
agentops/evaluators/: __init__.py  readiness.py  scope_drift.py  session_eval.py
docs/: README.md  architecture.md  development-roadmap.md  positioning-and-boundaries.md  project-memory.md
tests/: test_asset_models.py  test_ci_scanner.py  test_cli.py  test_core_models.py  test_diff_parser.py  test_eval_models.py  test_eval_report_writer.py  test_eval_runtime.py  test_evidence_models.py  test_git_analyzer.py  test_history_reader.py  test_improve_aggregate.py  test_improve_hooks.py  test_improve_instructions.py  test_improve_runtime.py  test_improvement_report_writer.py  test_intent_judge.py  test_llm_client.py  test_llm_intent_judge.py  test_llm_openai_compatible.py  test_memory_aggregate.py  test_memory_candidates.py  test_memory_failure_modes.py  test_memory_models.py  test_memory_report_writer.py  test_memory_runtime.py  test_memory_trend.py  test_readiness_evaluator.py  test_repo_initializer.py  test_repo_scanner.py  test_report_writer.py  test_scan_runtime.py  test_scope_drift.py  test_session_eval.py  test_session_log_hook.py  test_session_models.py  test_shell_output_parser.py  test_trace_writer.py  test_transcript_parser.py  test_workflow_models.py  (+1 more)
(+52 files in other folders)
